brat/test/golden/error/fanout-dynamic-length.brat
f(n :: #, Vec(Qubit, n)) -> { Qubit, Qubit }
f(n) = { [/\] }
