brat/test/golden/error/fanout-dynamic-length.brat.golden
Error in test/golden/error/fanout-dynamic-length.brat on line 2:
f(n) = { [/\] }
         ^^^^

  Type error: Can't fanout a Vec with non-constant length: VPar Ex checking_check_defs_1_f_LambdaChk_6_checkClauses_1_lambda.0_rhs/in_3 0

